Run App On Startup Option Add
It is now possible to make the app run on startup.

--- a/Desktop/DoorBell/DoorBell/DoorBell.csproj
+++ b/Desktop/DoorBell/DoorBell/DoorBell.csproj
@@ -65,6 +65,7 @@
     <Compile Include="SettingsOperations.cs" />
     <Compile Include="SoundControl.cs" />
     <Compile Include="ConnectionTimer.cs" />
+    <Compile Include="StartupManager.cs" />
     <Compile Include="ThreadSafe.cs" />
     <Compile Include="UDP.cs" />
     <EmbeddedResource Include="MainWindow.resx">
